Primeros cambios para feedback

--- a/src/app/pages/pedidos/pedidos.page.html
+++ b/src/app/pages/pedidos/pedidos.page.html
@@ -5,30 +5,30 @@
 
     <div class="container ">
         <div class=" mt-5 h-100">
-          <h1 class="text-start pt-5">Today Orders</h1>
+          <h1 class="text-start pt-5">Ordenes del día</h1>
           <div class="d-flex row  my-4"  >
             <ion-button (click)="seleccionar(status.TOCONFIRM)" class="mx-auto col-md-2 my-3"  expand="block" style="color: white !important; max-width: 250px;" shape="round">
-              Pending <span class="font-bold" class="ms-3 c " style="font-weight: bolder;">{{TOCONFIRM}}</span>
+              Pendientes <span class="font-bold" class="ms-3 c " style="font-weight: bolder;">{{TOCONFIRM}}</span>
             </ion-button>
 
             <ion-button (click)="seleccionar(status.ACCEPTED)"  class="mx-auto col-md-2 my-3"  expand="block" style="color: white !important; max-width: 250px;" shape="round">
-              Accepted <span class="badge badge-light" class="ms-3 c" style="font-weight: bolder;">{{ACCEPTED}}</span>
+              Aceptadas <span class="badge badge-light" class="ms-3 c" style="font-weight: bolder;">{{ACCEPTED}}</span>
             </ion-button>
 
             <ion-button (click)="seleccionar(status.PREPARING)"  class="mx-auto col-md-2 my-3"  expand="block" style="color: white !important; max-width: 250px;" shape="round">
-              Preparing <span class="badge badge-light" class="ms-3 c" style="font-weight: bolder;">{{PREPARING}}</span>
+              reparación <span class="badge badge-light" class="ms-3 c" style="font-weight: bolder;">{{PREPARING}}</span>
             </ion-button>
 
             <ion-button (click)="seleccionar(status.READY)"  class="mx-auto col-md-2 my-3"  expand="block" style="color: white !important; max-width: 250px;" shape="round">
-              To Send <span class="badge badge-light" class="ms-3 c"style="font-weight: bolder;">{{READY}}</span>
+              Para enviar <span class="badge badge-light" class="ms-3 c"style="font-weight: bolder;">{{READY}}</span>
             </ion-button>
 
             <ion-button (click)="seleccionar(status.ONWALK)"  class="mx-auto col-md-2 my-3"  expand="block" style="color: white !important; max-width: 250px;" shape="round">
-              Sent <span class="badge badge-light" class="ms-3 c" style="font-weight: bolder;">{{ONWALK}}</span>
+              Enviadas <span class="badge badge-light" class="ms-3 c" style="font-weight: bolder;">{{ONWALK}}</span>
             </ion-button>
 
             <ion-button (click)="seleccionar(status.FINISHED)" class="mx-auto col-md-2 my-3"  expand="block" style="color: white !important; max-width: 250px;" shape="round">
-              Finished  <span class="badge badge-light" class="ms-3 " style="font-weight: bolder;">{{FINISHED}}</span>
+              Terminadas  <span class="badge badge-light" class="ms-3 " style="font-weight: bolder;">{{FINISHED}}</span>
             </ion-button>
 
 
